--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,15 @@
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1596828493937/work
-astroid==2.4.2
-async-generator==1.10
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-backcall==0.2.0
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
-bokeh @ file:///tmp/build/80754af9/bokeh_1603297833684/work
-Brotli @ file:///tmp/build/80754af9/brotli-split_1602517619121/work
-certifi==2020.12.5
-cffi @ file:///tmp/build/80754af9/cffi_1606255081583/work
-click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-cytoolz==0.11.0
-dash @ file:///tmp/build/80754af9/dash_1602169941850/work
+dash==1.16.3
 dash-core-components==1.3.1
 dash-html-components==1.0.1
 dash-renderer==1.1.2
 dash-table==4.4.1
-decorator==4.4.2
-defusedxml==0.6.0
-distributed @ file:///tmp/build/80754af9/distributed_1605066520644/work
-entrypoints==0.3
-Flask==1.1.2
-Flask-Compress @ file:///tmp/build/80754af9/flask-compress_1605067594328/work
-fsspec @ file:///tmp/build/80754af9/fsspec_1602684995936/work
-future==0.18.2
 gunicorn==20.0.4
-HeapDict==1.0.1
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-isort==5.6.4
-itsdangerous==1.1.0
-jedi @ file:///tmp/build/80754af9/jedi_1606932564285/work
-Jinja2==2.11.2
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-lazy-object-proxy==1.4.3
-locket==0.2.0
-MarkupSafe==1.1.1
-mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-msgpack==1.0.0
-nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
-nbconvert @ file:///tmp/build/80754af9/nbconvert_1601914830498/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1606153767164/work
-notebook @ file:///tmp/build/80754af9/notebook_1601501575118/work
 numpy==1.18.5
-olefile==0.46
-packaging @ file:///tmp/build/80754af9/packaging_1606930849755/work
-pandas @ file:///tmp/build/80754af9/pandas_1592841659173/work
-pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120460739/work
-parso==0.7.0
-partd==1.1.0
-patsy==0.5.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///tmp/build/80754af9/pillow_1603822255246/work
-plotly @ file:///tmp/build/80754af9/plotly_1599764639247/work
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1606344362066/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
-psutil @ file:///tmp/build/80754af9/psutil_1598370257551/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1605560620615/work/dist/ptyprocess-0.6.0-py2.py3-none-any.whl
+pandas==1.0.5
+plotly==4.10.0
 pyarrow==0.15.1
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments @ file:///tmp/build/80754af9/pygments_1604103097372/work
-pylint==2.6.0
-pyparsing==2.4.7
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141720057/work
-python-dateutil==2.8.1
-pytz @ file:///tmp/build/80754af9/pytz_1606604771399/work
-PyYAML==5.3.1
-pyzmq==20.0.0
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
-QtPy==1.9.0
-retrying==1.3.3
-scipy @ file:///tmp/build/80754af9/scipy_1597686649129/work
-Send2Trash==1.5.0
-sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1605205327372/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
+pyyaml==5.3.1
+scipy==1.5.2
+snappy==1.1.8
 statsmodels==0.11.1
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-terminado==0.9.1
-testpath==0.4.4
-toml==0.10.2
-toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
-tornado @ file:///tmp/build/80754af9/tornado_1606942300299/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
+yaml==0.2.5
