requirements and data update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-dash==1.16.3
-dash-core-components==1.12.1
-dash-html-components==1.1.1
-dash-renderer==1.8.2
-dash-table==4.10.1
-gunicorn==20.0.4
-numpy==1.18.5
-pandas==1.0.5
-plotly==4.10.0
-pyarrow==0.15.1
-pyyaml>=5.4
-scipy==1.5.2
-statsmodels==0.11.1
+dash==2.8.1
+dash-renderer==1.9.1
+dash-table
+gunicorn
+numpy==1.22
+pandas==1.5.3
+plotly==5.13.0
+pyarrow==11.0.0
+pyyaml==6.0
+scipy==1.10.0
+statsmodels==0.13.5
