--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,23 +17,23 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
-        args: [--profile, black, -l, "90", atp_stats, app]
+        args: [--profile, black, -l, "90", atp_stats, webapp]
 -   repo: https://github.com/psf/black
     rev: 22.12.0
     hooks:
       - id: black
         language_version: python3.8
-        args: [--target-version, py38, --line-length, "90", atp_stats, app]
+        args: [--target-version, py38, --line-length, "90", atp_stats, webapp]
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
     rev: v1.0.5
     hooks:
     -   id: python-bandit-vulnerability-check
-        args: [--skip, "B101",--severity-level, medium,  --recursive, atp_stats, app]
+        args: [--skip, "B101",--severity-level, medium,  --recursive, atp_stats, webapp]
 -   repo: https://github.com/econchick/interrogate
     rev: 1.5.0
     hooks:
     -   id: interrogate
-        args: [-vv, --ignore-nested-functions, --ignore-module, --ignore-init-method, --ignore-private, --ignore-magic, --ignore-property-decorators, --fail-under=90, atp_stats, app]
+        args: [-vv, --ignore-nested-functions, --ignore-module, --ignore-init-method, --ignore-private, --ignore-magic, --ignore-property-decorators, --fail-under=90, atp_stats, webapp]
 -   repo: https://github.com/pre-commit/pygrep-hooks
     rev: 7638d0035a770dd67283b7d464e4db3c0043f609
     hooks:
