--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,7 @@ install_requires =
 [options.extras_require]
 app =
     dash==2.8.1
-    dash-renderer==1.9.1
-    dash-table
+    dash-bootstrap-components==1.3.1
     gunicorn
 
 dev =
