--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ zip_safe = True
 install_requires =
     compclasses==0.2.0
     numpy==1.22
+    polars
     plotly==5.13.0
     pyarrow==11.0.0
     scipy==1.10.0
@@ -25,6 +26,9 @@ app =
     dash==2.8.1
     dash-bootstrap-components==1.3.1
     gunicorn
+    pandas
+    pyyaml
+    orjson
 
 dev =
     black==22.12.0
