--- a/requirements/requirements-app.txt
+++ b/requirements/requirements-app.txt
@@ -1,6 +1,6 @@
 dash==2.8.1
 dash-bootstrap-components==1.3.1
-gunicorn
-orjson
-pandas
-pyyaml
+gunicorn==20.1.0
+orjson==3.8.6
+pandas==1.5.3
+pyyaml==6.0
