--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ zip_safe = True
 install_requires =
     compclasses==0.2.0
     numpy==1.22
-    polars
+    polars==0.16.1
     plotly==5.13.0
     pyarrow==11.0.0
     scipy==1.10.0
@@ -25,10 +25,10 @@ install_requires =
 app =
     dash==2.8.1
     dash-bootstrap-components==1.3.1
-    gunicorn
-    pandas
-    pyyaml
-    orjson
+    gunicorn==20.1.0
+    pandas==1.5.3
+    pyyaml==6.0
+    orjson==3.8.6
 
 dev =
     black==22.12.0
