--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     rev: v1.0.5
     hooks:
     -   id: python-bandit-vulnerability-check
-        args: [--skip, "B101",--severity-level, medium,  --recursive, atp_stats, webapp]
+        args: [--skip, "B101,B104", --severity-level, medium,  --recursive, atp_stats, webapp]
 -   repo: https://github.com/econchick/interrogate
     rev: 1.5.0
     hooks:
