--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,9 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
+    -   id: trailing-whitespace
     -   id: name-tests-test
+    -   id: end-of-file-fixer
     -   id: requirements-txt-fixer
     -   id: check-json
     -   id: check-yaml
