--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,5 +2,62 @@
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "atp_stats"
+version = "0.2.0"
+author = "Francesco Bruzzesi"
+
+# license = {file = "LICENSE.txt"}
+readme = "README.md"
+requires-python = ">=3.8"
+
+
+# Requirements: This is done differently by poetry!
+dependencies = [
+    "compclasses==0.2.0",
+    "numpy==1.22",
+    "polars==0.16.1",
+    "plotly==5.13.0",
+    "pyarrow==11.0.0",
+    "scipy==1.10.0",
+]
+
+[project.optional-dependencies]
+app =[
+    "dash==2.8.1",
+    "dash-bootstrap-components==1.3.1",
+    "gunicorn==20.1.0",
+    "pandas==1.5.3",
+    "pyyaml==6.0",
+    "orjson==3.8.6",
+    ]
+
+dev =[
+    "black==22.12.0",
+    "interrogate==1.5.0",
+    "isort==5.10.1",
+    "pre-commit==2.21.0",
+    "pytest==7.2.0",
+]
+
+doc =[
+    "mkdocs==1.4.2",
+    "mkdocs-material==9.0.0",
+    "mkdocstrings==0.19.1",
+    ]
+
+[tool.setuptools.packages.find]
+include = ["atp_stats*"]
+exclude = ["docs", "tests", "data", "docker", "results", "notebooks", "kubernetes"]
+
+[tool.black]
+line-length = 90
+target_version = ['py38']
+
+[tool.isort]
+py_version = 38
+profile = "black"
+line_length = 90
+
 [tool.ruff]
 line-length = 90
